--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   sqflite: ^2.3.0
+  http: ^1.1.0
+  mask_text_input_formatter: ^2.5.0
+  uuid: ^4.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
