--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
   http: ^1.1.0
   mask_text_input_formatter: ^2.5.0
   uuid: ^4.1.0
+  flutter_svg: ^2.0.9
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
